--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,9 @@ requests
 pandas  
 numpy  
 ccxt  # For connecting to crypto exchanges  
-loguru  # For logging  
 pytest  # For testing  
 python-dotenv  # For managing environment variables  
 python-telegram-bot  # For sending messages to Telegram
+SQLAlchemy  # For connecting to databases
+mysql-connector-python
+pandas_ta  # For technical analysis
