--- a/autotrader/config.json
+++ b/autotrader/config.json
@@ -9,7 +9,7 @@
     "symbol": "BTCUSDT",
     
     "telegram": {
-        "token": "7927116508:AAH0I3XHFLpYDBoa53hitKTixxoN5yFwufQ",
-        "chatId": "1285226554"
+        "token": "",
+        "chatId": ""
     }
 }
